# zkVerify

./: .gitignore  CLAUDE.md  COMPETITION_SUMMARY.md  Cargo.toml  HEADER-APACHE2  HEADER-GPL3  Makefile.toml  PROJECT_SUMMARY.md  PR_DESCRIPTION_CLEAN.md  README.md  README_STARK_VERIFIER.md  RELAY.md  STARK_VERIFIER_TUTORIAL.md  SUBMISSION_CHECKLIST.md  TEST_RESULTS.md  VERIFIER_TEST_RESULTS.md  agents.md  aggregate_400_var.out  bench.json  bench_clean.json  clean_submitted_storage_1400_16.out  clean_submitted_storage_4800_1.out  mock_proof.json  simple_proof.cairo  tatus  twitter_post.md  verification_key.json  zkv_perf_e2e_nosudo.js
native/: Cargo.toml  build.rs
native/src/: compat.rs  groth16.rs  lib.rs  risc0.rs  stwo_verify.rs
native/src/accelerated_bn/: bn254.rs  mod.rs  test_utils.rs  utils.rs
pallets/aggregate/: Cargo.toml
pallets/aggregate/src/: benchmarking.rs  data.rs  lib.rs  migrations.rs  mock.rs  should.rs  tests.rs  weight.rs
pallets/crl/: Cargo.toml
pallets/crl/src/: benchmarking.rs  lib.rs  mock.rs  should.rs  weight.rs
pallets/hyperbridge_aggregations/: Cargo.toml
pallets/hyperbridge_aggregations/src/: benchmarking.rs  lib.rs  mock.rs
pallets/stwo/: Cargo.toml
pallets/stwo-verifier/: Cargo.toml
pallets/stwo-verifier/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/stwo/src/: lib.rs  verifier.rs
pallets/stwo/test_data/: proof.json  public_inputs.json  verification_key.json
pallets/supernova-verifier/: Cargo.toml
pallets/supernova-verifier/src/: benchmarking.rs  lib.rs
pallets/token-claim/: Cargo.toml
pallets/token-claim/src/: benchmarking.rs  beneficiary.rs  ethereum.rs  lib.rs  mock.rs  tests.rs  utils.rs  weight.rs
pallets/verifiers/: Cargo.toml
pallets/verifiers/macros/: Cargo.toml
pallets/verifiers/src/: benchmarking_utils.rs  common.rs  lib.rs  mock.rs  tests.rs  traits.rs
pallets/verifiers/traits/: Cargo.toml
pallets/zkverify-starky/: Cargo.toml
pallets/zkverify-starky/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
primitives/hp-dispatch/: Cargo.toml
primitives/hp-dispatch/src/: lib.rs
primitives/hp-on-proof-verified/: Cargo.toml
primitives/hp-on-proof-verified/src/: lib.rs
primitives/verifiers/: Cargo.toml
primitives/verifiers/src/: lib.rs
relay-node/benchmarks/: Cargo.toml  zkv-deploy-weight-template-xcm.hbs  zkv-deploy-weight-template.hbs  zkv-pallets-weight-template.hbs
relay-node/benchmarks/src/: hardware.rs  lib.rs  reference_hardware.json
relay-node/service/: Cargo.toml  upstream-differences.md
relay-node/service/src/: benchmarking.rs  builder.rs  chain_spec.rs  grandpa_support.rs  lib.rs  overseer.rs  relay_chain_selection.rs  rpc.rs  tests.rs  workers.rs
rpc/ultraplonk_vk_hash/: Cargo.toml
rpc/ultraplonk_vk_hash/src/: lib.rs
rpc/vk_hash/: Cargo.toml
rpc/vk_hash/src/: lib.rs
runtime/: Cargo.toml  build.rs  migration_to_2512.md  rustc-ice-2025-08-21T03_49_37-56329.txt  rustc-ice-2025-08-21T04_03_36-59151.txt
runtime/common/: Cargo.toml
runtime/common/src/: genesis_config_presets_helper.rs  lib.rs  payout.rs  types.rs
runtime/src/: bag_thresholds.rs  genesis_config_presets.rs  lib.rs  migrations.rs  pallet_assets_mock.rs  parachains.rs  payout.rs  proxy.rs  tests.rs  weights.rs  xcm_config.rs
runtime/src/governance/: mod.rs  origins.rs  tracks.rs
runtime/src/tests/: availability.rs  misc.rs  pallets_interact.rs  payout.rs  proxy.rs  testsfixtures.rs  use_correct_weights.rs
runtime/src/weights/: block_weights.rs  db.rs  extrinsic_weights.rs  frame_election_provider_support.rs  frame_system.rs  frame_system_extensions.rs  ismp_grandpa.rs  pallet_aggregate.rs  pallet_bags_list.rs  pallet_balances.rs  pallet_bounties.rs  pallet_child_bounties.rs  pallet_claim.rs  pallet_conviction_voting.rs  pallet_fflonk_verifier.rs  pallet_groth16_verifier.rs  pallet_halo2_verifier.rs  pallet_hyperbridge_aggregations.rs  pallet_message_queue.rs  pallet_multisig.rs  pallet_plonky2_verifier.rs  pallet_plonky2_verifier_verify_proof.rs  pallet_poe.rs  pallet_preimage.rs  pallet_proofofsql_verifier.rs  pallet_proxy.rs  pallet_referenda.rs  pallet_risc0_verifier.rs  pallet_risc0_verifier_verify_proof.rs  pallet_scheduler.rs  pallet_session.rs  pallet_sp1_verifier.rs  pallet_staking.rs  pallet_sudo.rs  pallet_timestamp.rs  pallet_token_gateway.rs  pallet_transaction_payment.rs  pallet_treasury.rs  pallet_ultrahonk_verifier.rs  pallet_ultraplonk_verifier.rs  (+6 more)
runtime/tests/: genesis_dev_golden.json
runtime/volta/: Cargo.toml
runtime/volta/src/: genesis_config_presets.rs  lib.rs  migrations.rs  parachains.rs  payout.rs  proxy.rs  weights.rs  xcm_config.rs
runtime/zkverify/: Cargo.toml  build.rs
runtime/zkverify/src/: bag_thresholds.rs  genesis_config_presets.rs  lib.rs  macros.rs  migrations.rs  pallet_assets_mock.rs  parachains.rs  payout.rs  payout_conf.rs  proxy.rs  tests.rs  types.rs  weights.rs  xcm_config.rs
tools/zkv-transform/: Cargo.toml
tools/zkv-transform/src/: main.rs
verifier-nostd-check/: Cargo.toml  README.md  build.rs
verifier-nostd-check/maybe-fail/: Cargo.toml
verifier-nostd-check/maybe-fail/src/: lib.rs
verifier-nostd-check/risc0/: Cargo.toml
verifier-nostd-check/risc0/src/: lib.rs
verifier-nostd-check/src/: lib.rs
verifier-nostd-check/ultraplonk/: Cargo.toml
verifier-nostd-check/ultraplonk/src/: lib.rs
verifiers/ezkl/: Cargo.toml
verifiers/ezkl/src/: benchmarking.rs  lib.rs  resources.rs  verifier_should.rs  weight.rs
verifiers/fflonk/: Cargo.toml
verifiers/fflonk/src/: benchmarking.rs  lib.rs  resources.rs  verifier_should.rs  vk.rs  weight.rs
verifiers/groth16/: Cargo.toml
verifiers/groth16/src/: benchmarking.rs  groth16.rs  lib.rs  verifier_should.rs  weight.rs
verifiers/halo2/: Cargo.toml
verifiers/halo2/examples/: common.rs  shuffle.rs  vector_mul.rs
verifiers/halo2/src/: benchmarking.rs  circuit_info.rs  constraint_system.rs  lib.rs  params.rs  verifier_should.rs  vk.rs  weight.rs
verifiers/plonky2/: Cargo.toml
verifiers/plonky2/src/: lib.rs  (+8 more)
verifiers/risc0/: Cargo.toml
verifiers/sp1/: Cargo.toml
(+651 files in other folders)
