[workspace]
members = [
    "primitives/verifiers",
    "pallets/stwo-verifier",
    "pallets/verifiers",
    "runtime"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["crepeey <ayanbundaola@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/crepeey/zkverify"
