[workspace.package]
authors = ["Horizen Labs <admin@horizenlabs.io>"]
edition = "2021"
repository = "https://github.com/zkVerify/zkVerify"
homepage = "https://horizenlabs.io"

[workspace]
resolver = "2"

members = [
    "runtime/zkverify",
    "primitives/hp-dispatch",
    "primitives/hp-on-proof-verified",
    "native",
    "pallets/aggregate",
    "pallets/verifiers",
    "pallets/verifiers/macros",
    "pallets/crl",
    "pallets/token-claim",
    "primitives/hp-verifiers",
    "primitives/hp-groth16",
    "verifiers/fflonk",
    "verifiers/groth16",
    "verifiers/risc0",
    "verifiers/risc0/risc0-derive",
    "verifiers/ultrahonk",
    "verifiers/ultraplonk",
    "verifiers/ezkl",
    "verifiers/plonky2",
    "verifiers/sp1",
    "verifiers/tee",
    "utils/native-cache",
    "relay-node",
    "relay-node/benchmarks",
    "relay-node/cli",
    "relay-node/service",
    "relay-node/test/client",
    "relay-node/test/service",
    "relay-node/test/runtime",
    "relay-node/test/runtime/constants",
    "relay-node/test/subsystem-helpers",
    "relay-node/test/substrate/client",
    "rpc/aggregate",
    "rpc/aggregate/runtime-api",
    "rpc/vk_hash",
    "paratest/runtime",
    "paratest/node",
    "paratest/pallets/template",
    "patches/cumulus/client/relay-chain-inprocess-interface",
    "patches/cumulus/client/relay-chain-minimal-node",
]

exclude = ["utils/generate-bags/node-runtime"]

[workspace.dependencies]
anyhow = { version = "1.0", default-features = false }
clap = { version = "4.4.10", features = ["derive"] }
futures = { version = "0.3.21", features = ["thread-pool"] }
futures-timer = { version = "3.0.2" }
jsonrpsee = { version = "0.24.8", features = ["server"] }
binary-merkle-tree = { version = "16.0.0", default-features = false }
async-trait = { version = "0.1.57" }
serde = { version = "1.0.197", default-features = false }
rstest = { version = "0.24.0" }
rstest_reuse = { version = "0.7.0" }
hex-literal = { version = "0.4.1" }
metered = { version = "0.6.1", default-features = false, package = "prioritized-metered-channel" }
array-bytes = { version = "6.2.3", default-features = false }
tokio = { version = "1.37.0", default-features = false }
tracing = { version = "0.1.37", default-features = false }
log = { version = "0.4.26", default-features = false }
tempfile = "3.2.0"
rand = "0.8.5"
parking_lot = "0.12.1"
enumflags2 = "0.7.7"
chrono = { version = "0.4", default-features = false }

sc-cli = { version = "0.50.2" }
sc-executor = { version = "0.41.0" }
sc-network = { version = "0.48.5" }
sc-service = { version = "0.49.0" }
sc-telemetry = { version = "28.0.0" }
sc-transaction-pool = { version = "38.1.0" }
sc-transaction-pool-api = { version = "38.1.0" }
sc-offchain = { version = "43.0.1" }
sc-consensus-babe = { version = "0.48.0" }
sc-consensus-babe-rpc = { version = "0.48.0" }
sc-consensus = { version = "0.47.0" }
sc-consensus-grandpa = { version = "0.33.0" }
sc-consensus-grandpa-rpc = { version = "0.33.0" }
sc-client-api = { version = "38.0.0" }
sc-sysinfo = { version = "41.0.0" }

pallet-transaction-payment = { version = "39.1.0", default-features = false }

sp-io = { version = "39.0.1", default-features = false }
sp-timestamp = { version = "35.0.0", default-features = false }
sp-keyring = { version = "40.0.0" }
sp-keystore = { version = "0.41.0" }

native = { default-features = false, path = "native" }
pallet-aggregate = { path = "pallets/aggregate", default-features = false }
pallet-crl = { path = "pallets/crl", default-features = false }
pallet-token-claim = { path = "pallets/token-claim", default-features = false }
pallet-verifiers = { path = "pallets/verifiers", default-features = false }
pallet-verifiers-macros = { path = "pallets/verifiers/macros" }
hp-on-proof-verified = { default-features = false, path = "primitives/hp-on-proof-verified" }
hp-dispatch = { default-features = false, path = "primitives/hp-dispatch" }
hp-verifiers = { path = "primitives/hp-verifiers", default-features = false }
hp-groth16 = { path = "primitives/hp-groth16", default-features = false }
pallet-ezkl-verifier = { path = "verifiers/ezkl", default-features = false }
pallet-fflonk-verifier = { path = "verifiers/fflonk", default-features = false }
pallet-groth16-verifier = { path = "verifiers/groth16", default-features = false }
pallet-risc0-verifier = { path = "verifiers/risc0", default-features = false }
pallet-ultrahonk-verifier = { path = "verifiers/ultrahonk", default-features = false }
pallet-ultraplonk-verifier = { path = "verifiers/ultraplonk", default-features = false }
pallet-sp1-verifier = { path = "verifiers/sp1", default-features = false }
pallet-tee-verifier = { path = "verifiers/tee", default-features = false }
risc0-verifier = { git = "https://github.com/zkVerify/risc0-verifier.git", tag = "v0.11.0", default-features = false }
pallet-plonky2-verifier = { path = "verifiers/plonky2", default-features = false }
ezkl-no-std = { git = "https://github.com/zkVerify/ezkl_verifier.git", default-features = false, tag = "v0.1.0" }
ultrahonk-no-std = { git = "https://github.com/zkVerify/ultrahonk_verifier.git", default-features = false, tag = "v0.3.0" }
ultraplonk-no-std = { git = "https://github.com/zkVerify/ultraplonk_verifier.git", default-features = false, tag = "v0.4.0" }
tee-verifier = { git = "https://github.com/zkVerify/tee-verifier.git", default-features = false, tag = "v0.1.0" }
serde-json-core = { version = "0.6.0", default-features = false }

zkv-benchmarks = { path = "relay-node/benchmarks" }
native-cache = { path = "utils/native-cache" }
zkv-runtime = { path = "runtime/zkverify", default-features = false }

# These dependencies are used for the node template's RPCs
sc-rpc = { version = "43.0.0" }
sp-blockchain = { version = "38.0.0" }
sc-basic-authorship = { version = "0.48.0" }
substrate-frame-rpc-system = { version = "42.0.0" }
frame-election-provider-support = { version = "39.0.1", default-features = false }
pallet-election-provider-support-benchmarking = { version = "38.0.0", default-features = false }
pallet-session-benchmarking = { version = "39.1.0", default-features = false }
pallet-transaction-payment-rpc = { version = "42.0.0" }
frame-benchmarking-cli = { version = "46.2.0" }
vk-hash = { path = "./rpc/vk_hash" }

codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = [
    "derive",
] }
scale-info = { version = "2.10.0", default-features = false, features = [
    "derive",
    "serde",
] }

pallet-offences = { version = "38.0.0", default-features = false }
pallet-authorship = { version = "39.0.0", default-features = false }
pallet-bags-list = { version = "38.0.0", default-features = false }
pallet-session = { version = "39.0.0", default-features = false }
pallet-staking = { version = "39.1.0", default-features = false }
pallet-staking-reward-curve = { version = "12.0.0", default-features = false }
pallet-babe = { version = "39.1.0", default-features = false }
pallet-balances = { version = "40.1.0", default-features = false }
frame-support = { version = "39.1.0", default-features = false }
pallet-grandpa = { version = "39.1.0", default-features = false }
pallet-sudo = { version = "39.0.0", default-features = false }
pallet-multisig = { version = "39.1.1", default-features = false }
pallet-scheduler = { version = "40.2.1", default-features = false }
pallet-preimage = { version = "39.1.0", default-features = false }
pallet-referenda = { version = "39.1.0", default-features = false }
pallet-utility = { version = "39.1.0", default-features = false }
pallet-vesting = { version = "39.1.0", default-features = false }
sp-mmr-primitives = { version = "35.0.0", default-features = false }
pallet-conviction-voting = { version = "39.1.0", default-features = false }
pallet-treasury = { version = "38.1.0", default-features = false }
pallet-bounties = { version = "38.1.0", default-features = false }
pallet-child-bounties = { version = "38.1.0", default-features = false }
pallet-proxy = { version = "39.1.0", default-features = false }
pallet-identity = { version = "39.1.0", default-features = false }
frame-system = { version = "39.1.0", default-features = false }
frame-try-runtime = { version = "0.45.0", default-features = false }
pallet-timestamp = { version = "38.0.0", default-features = false }
frame-executive = { version = "39.1.1", default-features = false }
sp-api = { version = "35.0.0", default-features = false }
sp-block-builder = { version = "35.0.0", default-features = false }
sp-consensus = { version = "0.41.0", default-features = false }
sp-consensus-babe = { version = "0.41.0", default-features = false, features = [
    "serde",
] }
finality-grandpa = { default-features = false, version = "0.16.2" }
sp-consensus-grandpa = { version = "22.0.0", default-features = false, features = [
    "serde",
] }
sp-core = { version = "35.0.0", default-features = false, features = ["serde"] }
sp-inherents = { version = "35.0.0", default-features = false }
sp-offchain = { version = "35.0.0", default-features = false }
sp-runtime = { version = "40.1.0", default-features = false, features = [
    "serde",
] }
sp-runtime-interface = { version = "29.0.0", default-features = false }
sp-session = { version = "37.0.0", default-features = false }
sp-staking = { version = "37.0.0", default-features = false }
sp-storage = { version = "22.0.0", default-features = false }
sp-transaction-pool = { version = "35.0.0", default-features = false }
sp-version = { version = "38.0.0", default-features = false, features = [
    "serde",
] }
serde_json = { version = "1.0.114", default-features = false, features = [
    "alloc",
] }
sp-weights = { version = "31.0.0", default-features = false }
sp-genesis-builder = { version = "0.16.0", default-features = false }
sp-npos-elections = { version = "35.1.0", default-features = false }
aggregate-rpc = { default-features = false, path = "rpc/aggregate" }
aggregate-rpc-runtime-api = { default-features = false, path = "rpc/aggregate/runtime-api" }

frame-metadata-hash-extension = { version = "0.7.0", default-features = false }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "35.0.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "39.0.0", default-features = false }

# Used for runtime benchmarking
frame-benchmarking = { version = "39.1.0", default-features = false }
frame-system-benchmarking = { version = "39.0.0", default-features = false }

substrate-wasm-builder = { version = "25.0.1" }
substrate-build-script-utils = { version = "11.0.0" }

# Used for relay chain

zkv-cli = { path = "relay-node/cli" }
service = { package = "zkv-service", path = "relay-node/service" }

polkadot-node-core-pvf = { version = "21.0.1" }
polkadot-node-core-pvf-prepare-worker = { version = "17.0.1" }
polkadot-overseer = { version = "21.1.0" }
polkadot-node-core-pvf-common = { version = "17.0.1" }
polkadot-node-core-pvf-execute-worker = { version = "17.0.0" }


sc-authority-discovery = { version = "0.48.0" }
sc-block-builder = { version = "0.43.0" }
sc-chain-spec = { version = "41.0.0" }
sc-client-db = { version = "0.45.1" }
sc-consensus-slots = { version = "0.47.0" }
sc-network-common = { version = "0.47.0" }
sc-network-sync = { version = "0.47.0" }
sc-sync-state-rpc = { version = "0.48.0" }
sc-keystore = { version = "34.0.0" }
telemetry = { version = "28.0.0", package = "sc-telemetry" }
sp-authority-discovery = { version = "35.0.0", default-features = false }
sp-state-machine = { version = "0.44.0" }
prometheus-endpoint = { version = "0.17.1", package = "substrate-prometheus-endpoint" }
substrate-state-trie-migration-rpc = { version = "41.0.0" }

polkadot-node-metrics = { version = "21.1.0" }
polkadot-node-primitives = { version = "17.0.1" }
sc-storage-monitor = { version = "0.23.0" }
sc-tracing = { version = "38.0.0" }
sp-maybe-compressed-blob = { version = "11.0.0" }

gum = { version = "17.0.0", package = "tracing-gum" }

polkadot-approval-distribution = { version = "21.0.0" }
polkadot-availability-bitfield-distribution = { version = "21.0.0" }
polkadot-availability-distribution = { version = "21.0.0" }
polkadot-availability-recovery = { version = "21.0.0" }
polkadot-collator-protocol = { version = "21.0.0" }
polkadot-dispute-distribution = { version = "21.1.0" }
polkadot-gossip-support = { version = "21.0.0" }
polkadot-network-bridge = { version = "21.0.0" }
polkadot-node-collation-generation = { version = "21.0.0" }
polkadot-node-core-approval-voting = { version = "21.0.0" }
polkadot-node-core-approval-voting-parallel = { version = "0.4.0" }
polkadot-node-core-av-store = { version = "21.0.0" }
polkadot-node-core-backing = { version = "21.0.0" }
polkadot-node-core-bitfield-signing = { version = "21.0.0" }
polkadot-node-core-candidate-validation = { version = "21.0.1" }
polkadot-node-core-chain-api = { version = "21.0.0" }
polkadot-node-core-chain-selection = { version = "21.0.0" }
polkadot-node-core-dispute-coordinator = { version = "21.0.0" }
polkadot-node-core-prospective-parachains = { version = "20.0.0" }
polkadot-node-core-provisioner = { version = "21.0.0" }
polkadot-node-core-pvf-checker = { version = "21.0.0" }
polkadot-node-core-runtime-api = { version = "21.0.1" }
polkadot-statement-distribution = { version = "21.1.0" }
polkadot-service = { version = "22.2.0" }

polkadot-core-primitives = { version = "16.0.0" }
polkadot-node-core-parachains-inherent = { version = "21.0.0" }
polkadot-parachain-primitives = { version = "15.0.0", default-features = false }
polkadot-primitives = { version = "17.1.0", default-features = false }
polkadot-node-subsystem = { version = "21.0.0" }
polkadot-node-subsystem-util = { version = "21.1.0" }
polkadot-node-subsystem-types = { version = "21.0.1" }
polkadot-runtime-parachains = { version = "18.1.0", default-features = false }
polkadot-node-network-protocol = { version = "21.0.0" }

authority-discovery-primitives = { version = "35.0.0", package = "sp-authority-discovery", default-features = false }
pallet-authority-discovery = { version = "39.0.0", default-features = false }
polkadot-runtime-common = { version = "18.1.0", default-features = false }
sc-rpc-spec-v2 = { version = "0.48.0" }

# TEST
substrate-test-client = { path = "relay-node/test/substrate/client" }
sp-trie = { version = "38.0.0" }
sp-arithmetic = { version = "26.0.0" }
sc-utils = { version = "18.0.0" }
sp-application-crypto = { version = "39.0.0", default-features = false }
pallet-indices = { version = "39.1.0", default-features = false }
pallet-xcm = { version = "18.1.2", default-features = false }
pallet-xcm-benchmarks = { version = "18.1.1", default-features = false }
xcm-builder = { version = "18.2.1", package = "staging-xcm-builder", default-features = false }
xcm-executor = { version = "18.0.3", package = "staging-xcm-executor", default-features = false }
xcm-runtime-apis = { version = "0.5.3", default-features = false }
xcm = { version = "15.1.0", package = "staging-xcm", default-features = false }

pallet-aura = { version = "38.1.0", default-features = false }
sp-consensus-aura = { version = "0.41.0", default-features = false }

# Cumulus
cumulus-client-cli = { version = "0.21.1" }
cumulus-client-collator = { version = "0.21.0" }
cumulus-client-consensus-aura = { version = "0.21.1" }
cumulus-client-consensus-common = { version = "0.21.0" }
cumulus-client-consensus-proposer = { version = "0.17.0" }
cumulus-client-service = { version = "0.22.0" }
cumulus-primitives-parachain-inherent = { version = "0.17.0" }
cumulus-relay-chain-interface = { version = "0.21.0" }
cumulus-primitives-aura = { version = "0.16.0", default-features = false }

cumulus-pallet-aura-ext = { version = "0.18.0", default-features = false }
cumulus-pallet-parachain-system = { version = "0.18.1", default-features = false }
cumulus-pallet-session-benchmarking = { version = "20.0.0", default-features = false }
cumulus-pallet-xcm = { version = "0.18.0", default-features = false }
cumulus-pallet-xcmp-queue = { version = "0.18.2", default-features = false }
cumulus-primitives-core = { version = "0.17.0", default-features = false }
cumulus-primitives-utility = { version = "0.18.1", default-features = false }
pallet-message-queue = { version = "42.0.0", default-features = false }
pallet-collator-selection = { version = "20.1.0", default-features = false }
parachains-common = { version = "19.0.0", default-features = false }
parachain-info = { version = "0.18.0", package = "staging-parachain-info", default-features = false }
cumulus-relay-chain-rpc-interface = { version = "0.21.2" }
substrate-rpc-client = { version = "0.47.0" }

[patch.crates-io]
cumulus-relay-chain-inprocess-interface = { path = "patches/cumulus/client/relay-chain-inprocess-interface" }
cumulus-relay-chain-minimal-node = { path = "patches/cumulus/client/relay-chain-minimal-node" }
polkadot-node-core-pvf-common = { path = "patches/polkadot/node/core/pvf/common" }

[profile.release]
# Polkadot runtime requires unwinding.
panic = "unwind"
opt-level = 3

[workspace.lints.clippy]
all = { level = "allow", priority = 0 }        # Basically, we accept the _perf_ clippy concerns
correctness = { level = "deny", priority = 1 } # But reject all other stuff
suspicious = { level = "deny", priority = 1 }
complexity = { level = "deny", priority = 1 }
style = { level = "warn", priority = 1 }
# perf = { level = "warn", priority = 1 }                            # We don't care about performace (polkadot also)
unnecessary_cast = { level = "allow", priority = 2 }      # Types may change
useless_conversion = { level = "allow", priority = 2 }    # Types may change
zero-prefixed-literal = { level = "allow", priority = 2 } # 00_1000_000

# make sure dev builds with backtrace do
# not slow us down
[profile.dev.package.backtrace]
inherits = "release"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[profile.testnet]
inherits = "release"
debug = 1               # debug symbols are useful for profilers
debug-assertions = true
overflow-checks = true
