[package]
name = "native"
description = "Provide a native implementation bridge for wasm executor"
version = "0.3.0"
license = "Apache-2.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
ark-bn254 = { version = "0.5.0", default-features = false }
ark-bn254-ext = { git = "https://github.com/zkVerify/accelerated-bn-cryptography.git", default-features = false, tag = "v0.6.0" }
ark-ec = { version = "0.5.0", default-features = false }
ark-scale = { features = ["hazmat"], version = "0.0.13", default-features = false }
risc0-verifier = { workspace = true }

sp-runtime-interface = { workspace = true }
codec = { workspace = true }
log = { workspace = true }
hp-verifiers = { workspace = true }
hp-groth16 = { workspace = true }

[dev-dependencies]
ark-ff = { version = "0.5.0", default-features = false }

[features]
default = [ "std" ]
std = [
	"ark-bn254-ext/std",
	"ark-bn254/std",
	"ark-ec/parallel",
	"ark-ec/std",
	"ark-ff/std",
	"ark-scale/std",
	"codec/std",
	"hp-groth16/implementation",
	"hp-groth16/std",
	"hp-verifiers/std",
	"log/std",
	"sp-runtime-interface/std",
]
